Fix z-index and opacity

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,6 +4,7 @@
      display: grid;
      grid-template-columns: var(--grid-container);
      position: fixed;
+     z-index: 999;
 
      &__inner {
           grid-column: inner;
